k8s/demo-app/40-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: lab-app
spec:
  selector:
    app: web
  ports:
    - name: http
      port: 80
      targetPort: 80
